<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_internet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone"
    android:background="@color/colorPrimaryLight"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:contentDescription="@string/image"
            android:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/txtNoConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/no_internet_msg"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/txtErorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/check_internet"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimaryGrey"
            android:textSize="16sp" />

        <com.google.android.material.button.MaterialButton
            android:layout_gravity="center"
            android:id="@+id/btnRetry"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/retry"
            app:cornerRadius="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:backgroundTint="@color/colorPrimaryDark"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>