<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image"
                android:padding="10dp"
                android:src="@drawable/register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:letterSpacing="0.03"
                android:text="@string/register"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="35sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_about"
                android:drawablePadding="5dp"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingStart="20dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorTextHint"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorTextHint"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorTextHint"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorTextHint"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="350dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text_border"
                android:drawableStart="@drawable/ic_call"
                android:drawablePadding="5dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingStart="20dp"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorTextHint"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/register_agree_msg"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/terms_and_privacy"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_primary"
                    android:gravity="center"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>