<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/report"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_bug_report"
            app:drawableTint="@color/colorWhite" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="5dp"
            app:tint="@color/colorWhite"
            android:contentDescription="@string/image" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="24dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/et_report"
            android:layout_width="match_parent"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/report_hint"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorReportHint"
            tools:ignore="TextFields" />

        <com.google.android.material.button.MaterialButton
            android:layout_gravity="center"
            android:id="@+id/btn_send"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/send"
            app:cornerRadius="10dp"
            android:foreground="?attr/selectableItemBackground"
            app:backgroundTint="@color/colorPrimaryDark"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>